<resources>
    <string name="app_name">SafeMeal</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="auth_failed">Authentication Failed :(</string>
    <string name="signed_out">Exited :(</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_tool">Restaurant</string>
    <string name="restaurants_tool">Restaurants</string>
    <string name="favorites_tool">Favorites</string>
    <string name="meals_tool">Meals</string>
    <string name="remove_history">Remove History</string>
    <string name="profile_tool">Profile</string>
    <string name="reviews_tool">Reviews</string>
    <string name="visit_history_tool">Visit History</string>
    <string name="restaurants_near_to_you">Restaurants Near You</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="user_profile">UserProfile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="restaurants_visited">Visited Restaurants</string>
    <string name="reviews">Reviews</string>
    <string name="textview">TextView</string>
    <string name="delete_button">Remove</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_name_">Restaurant Name:</string>
    <string name="user_email">User Email</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment:</string>
    <string name="chosen_meal">Chosen meal at the restaurant:</string>
    <string name="title_activity_restaurant_map">Map</string>
    <string name="name">Name:</string>
    <string name="city_">City:</string>
    <string name="search">Search</string>
    <string name="_4_6">(4.6)</string>
    <string name="address_">Address:</string>
    <string name="schedules_">Schedules:</string>
    <string name="review">Review</string>
    <string name="booking">Booking</string>
    <string name="meal">Meal</string>
    <string name="meals">Meals</string>
    <string name="cooking">Cooking:</string>
    <string name="booking_possibilities">Booking Possibilities:</string>
    <string name="reviews_possibilities">Review Possibilities:</string>
    <string name="distance">Distance:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="todo">TODO</string>
    <string name="city">City</string>
    <string name="address">Address</string>
</resources>