<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchRestaurant.InfoRestaurantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_restaurant_show"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/restaurant_tool" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/name_restaurant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/name"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/restaurant_image_info"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/restaurant_city_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:text="@string/city"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/restaurant_establishment_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:text="@string/restaurant"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/estrelas_info"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:numStars="5"
                        android:theme="@style/RatingBar" />

                    <TextView
                        android:id="@+id/nota_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginLeft="5dp"
                        android:lines="1"
                        android:text="(4.6)"
                        app:autoSizeMaxTextSize="12sp"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/adress_info"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:lines="2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/address"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/horarios_info"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:lines="2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/schedules_"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/is_table_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/booking_possibilities"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/yes_no_booking"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/review_perm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lines="1"
                android:text="@string/reviews_possibilities"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/yes_no_review"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/review_just"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/distance"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/reviews"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerview_show_reviews"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="5dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_review_restaurant"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_user_review"
                android:padding="5dp"
                android:text="Review" />

            <Button
                android:id="@+id/button_booking_restaurant"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_user_booking"
                android:padding="5dp"
                android:text="@string/booking" />

            <Button
                android:id="@+id/button_refeicao"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_user_meal"
                android:padding="5dp"
                android:text="@string/meal" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>