<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity.CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/image_view_layout"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_logo_registry"
                android:layout_width="299dp"
                android:layout_height="187dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/registration"
            android:textAlignment="center"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="30sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:inputType="textPersonName"
                android:lines="1"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="16sp"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/newUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:lines="1"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <Button
            android:id="@+id/creatNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</FrameLayout>